--- a/EddySapClone/app/src/main/AndroidManifest.xml
+++ b/EddySapClone/app/src/main/AndroidManifest.xml
@@ -1,9 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.tabutech.eddysap">
-    <uses-permission android:name="android.permission.INTERNET" />
-
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
@@ -13,6 +10,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.EddySap">
+        <activity
+            android:name=".View.auth.SetUserInfoActivity"
+            android:exported="true" />
         <activity
             android:name=".View.auth.PhoneLoginActivity"
             android:exported="true" />
@@ -32,6 +32,8 @@
             android:name=".View.MainActivity"
             android:exported="true" />
     </application>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
+    <uses-permission android:name="android.permission.INTERNET" />
 
 </manifest>
