Worked upon the settings layout screen and also worked upon the invite friends layout incase no chats started yet.

--- a/EddySapClone/app/src/main/AndroidManifest.xml
+++ b/EddySapClone/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.tabutech.eddysap">
 
     <application
@@ -10,6 +11,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.EddySap">
+        <activity
+            android:name=".View.Settings.SettingsActivity"
+            android:exported="true" />
         <activity
             android:name=".View.auth.SetUserInfoActivity"
             android:exported="true" />
@@ -32,8 +36,10 @@
             android:name=".View.MainActivity"
             android:exported="true" />
     </application>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-
     <uses-permission android:name="android.permission.INTERNET" />
+
+    <uses-permission
+        android:name="android.permission.ACCESS_NETWORK_STATE"
+        tools:ignore="ManifestOrder" />
 
 </manifest>
