worked upon the profile image pick from gallery

--- a/EddySapClone/app/src/main/AndroidManifest.xml
+++ b/EddySapClone/app/src/main/AndroidManifest.xml
@@ -3,6 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.tabutech.eddysap">
 
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        tools:ignore="ScopedStorage" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <application
         android:allowBackup="true"
         android:fullBackupContent="true"
@@ -11,6 +14,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.EddySap">
+        <activity
+            android:name=".View.Profile.ProfileActivity"
+            android:exported="true" />
         <activity
             android:name=".View.Settings.SettingsActivity"
             android:exported="true" />
@@ -36,10 +42,10 @@
             android:name=".View.MainActivity"
             android:exported="true" />
     </application>
-    <uses-permission android:name="android.permission.INTERNET" />
-
     <uses-permission
         android:name="android.permission.ACCESS_NETWORK_STATE"
         tools:ignore="ManifestOrder" />
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
 </manifest>
