--- a/EddySapClone/app/build.gradle
+++ b/EddySapClone/app/build.gradle
@@ -39,10 +39,10 @@ dependencies {
 
 
     //noinspection GradleCompatible,GradleCompatible
-    implementation 'androidx.appcompat:appcompat:1.4.1'
+    implementation 'androidx.appcompat:appcompat:1.4.2'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'com.google.firebase:firebase-auth:21.0.4'
+    implementation 'com.google.firebase:firebase-auth:21.0.5'
     implementation 'com.google.firebase:firebase-storage:20.0.1'
     implementation 'com.google.firebase:firebase-database:20.0.5'
     implementation 'com.google.firebase:firebase-firestore:24.1.2'
@@ -51,8 +51,9 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.google.android.material:material:1.6.0'
+    implementation 'com.google.android.material:material:1.7.0-alpha02'
     implementation 'com.github.bumptech.glide:glide:4.13.0'
-    implementation 'com.google.android.gms:play-services-location:19.0.1'
+    implementation 'com.google.android.gms:play-services-location:20.0.0'
     implementation 'com.hbb20:ccp:2.5.0'
     implementation 'com.google.firebase:firebase-storage'
     implementation platform('com.google.firebase:firebase-bom:30.0.2')
@@ -60,4 +61,10 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.13.0'
     //zoom image dependency
     implementation 'com.jsibbold:zoomage:1.3.1'
+
+
+    //for AndroidX use:
+    implementation 'com.github.3llomi:RecordView:3.1.1'
+
+
 }
